# fasthtmx

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  app.py  pyproject.toml
src/: app.py
static/: styles.css
templates/: index.html
tests/: conftest.py  test_app.py
