[project]
name = "fasthtmx"
version = "0.1.0"
description = "using HTMX and FastAPI together"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "ruff>=0.9.10",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
